package com.rocket.radar;

/**
 * Stub class for testing umlink.
 * This is a simplified version extracted from an Android project.
 * Original extends androidx.appcompat.app.AppCompatActivity
 */
public class MainActivity {
    private Object navBarBinding;  // com.rocket.radar.databinding.NavBarBinding
    private static final String TAG = "MainActivity";
    private Object mAuth;  // com.google.firebase.auth.FirebaseAuth
    private Object profileViewModel;  // com.rocket.radar.profile.ProfileViewModel
    private Object fusedLocationClient;  // com.google.android.gms.location.FusedLocationProviderClient
    private Object navController;  // androidx.navigation.NavController
    private Object repo;  // com.rocket.radar.profile.ProfileRepository
    private boolean isObserverInitialized;
    private final Object requestNotificationPermissionLauncher;  // ActivityResultLauncher
    private final Object requestLocationPermissionLauncher;  // ActivityResultLauncher

    public MainActivity() {
        this.requestNotificationPermissionLauncher = null;
        this.requestLocationPermissionLauncher = null;
    }

    protected void onCreate(Object savedInstanceState) {
    }

    private void askNotificationPermission() {
    }

    public void onStart() {
    }

    protected void onNewIntent(Object intent) {
    }

    protected void onResume() {
    }

    private void signInAnonymously() {
    }

    private void handleUserSignIn(Object user) {
    }

    private void checkGeolocationPermission(Object profile) {
    }

    private void fetchLastKnownLocation() {
    }

    public void setBottomNavigationVisibility(int visibility) {
    }
}
