package com.rocket.radar.notifications;

import java.util.List;

/**
 * Stub class for testing umlink.
 * This is a simplified version extracted from an Android project.
 * Original extends androidx.recyclerview.widget.RecyclerView.Adapter
 */
public class NotificationAdapter {
    private static final int VIEW_TYPE_NOTIFICATION = 0;
    private static final int VIEW_TYPE_SEPARATOR = 1;
    private static final int VIEW_TYPE_EMPTY = 2;

    private final Object context;  // android.content.Context
    private final List<Notification> notificationList;
    private final NotificationRepository repository;
    private int separatorIndex;

    public NotificationAdapter(Object context, List<Notification> notificationList,
                             NotificationRepository repository) {
        this.context = context;
        this.notificationList = notificationList;
        this.repository = repository;
    }

    public void setNotifications(List<Notification> newNotifications) {
    }

    private void calculateSeparatorIndex() {
    }

    public int getItemViewType(int position) {
        return 0;
    }

    public Object onCreateViewHolder(Object parent, int viewType) {
        return null;
    }

    public void onBindViewHolder(Object holder, int position) {
    }

    public int getItemCount() {
        return 0;
    }

    // Inner ViewHolder classes
    public static class NotificationViewHolder {
        Object eventImage;      // android.widget.ImageView
        Object eventTitle;      // android.widget.TextView
        Object notificationType; // android.widget.TextView
        Object unreadIndicator; // android.view.View

        public NotificationViewHolder(Object itemView) {
        }
    }

    public static class SeparatorViewHolder {
        Object separatorText;   // android.widget.TextView

        public SeparatorViewHolder(Object itemView) {
        }
    }

    public static class EmptyViewHolder {
        public EmptyViewHolder(Object itemView) {
        }
    }
}
