package com.rocket.radar.notifications;

import java.util.List;

/**
 * Stub class for testing umlink.
 * This is a simplified version extracted from an Android project.
 * Original uses Firebase Firestore and AndroidX LiveData.
 */
public class NotificationRepository {
    private static final String TAG = "NotificationRepository";
    private final Object db;  // com.google.firebase.firestore.FirebaseFirestore
    private Object userNotificationsRef;  // com.google.firebase.firestore.CollectionReference

    public NotificationRepository() {
        this.db = null;
    }

    // Original return type: androidx.lifecycle.LiveData<List<Notification>>
    public Object getMyNotifications() {
        return null;
    }

    public void markNotificationAsRead(String userNotificationId) {
    }

    public void sendNotificationToGroup(String title, String body, String eventId,
                                       String groupCollection) {
    }

    private void createAndFanOutNotification(String title, String body,
                                            List<String> usersToNotify) {
    }
}
